# RiichiMahjong

./: .gitignore  AGENTS.md  Cargo.toml  README.md  RULE_DECISIONS.md
.github/workflows/: ci.yml  windows-client.yml
.mimocode/plans/: 1782054778324-crisp-otter.md
crates/mahjong-ai/: Cargo.toml  build.rs
crates/mahjong-ai/src/: analysis.rs  lib.rs  shanten.rs
crates/mahjong-core/: Cargo.toml
crates/mahjong-core/src/: hand.rs  lib.rs  meld.rs  player.rs  tile.rs  wall.rs
crates/mahjong-engine/: Cargo.toml
crates/mahjong-engine/src/: action.rs  call.rs  game.rs  player.rs
crates/mahjong-server/: Cargo.toml
crates/mahjong-server/src/: main.rs
crates/mahjong-tui/: Cargo.toml
crates/mahjong-tui/src/: app.rs  input.rs  main.rs  ui.rs
crates/mahjong-tui/src/widgets/: board.rs  mod.rs  status.rs
crates/mahjong-yaku/: Cargo.toml
crates/mahjong-yaku/src/: analysis.rs  dora.rs  fu.rs  lib.rs  scoring.rs  types.rs  win_check.rs
crates/riichi-ai/: Cargo.toml
crates/riichi-ai/src/: call_decision.rs  discard.rs  efficiency.rs  lib.rs  riichi_decision.rs
crates/riichi-client/: Cargo.toml
crates/riichi-client/src/: analysis.rs  app.rs  input.rs  main.rs  ui.rs
crates/riichi-client/src/widgets/: board.rs  status.rs
crates/riichi-core/: Cargo.toml
crates/riichi-core/src/: game.rs  game_types.rs  hand.rs  lib.rs  macros.rs  player.rs  player_state.rs  tile.rs  tile37.rs  wall.rs
crates/riichi-debug/: Cargo.toml
crates/riichi-debug/src/: ai_client.rs  analysis.rs  app.rs  main.rs
crates/riichi-debug/src/widgets/: board.rs  status.rs
crates/riichi-engine/: Cargo.toml
crates/riichi-engine/src/: action.rs  call.rs  game.rs  game_abort.rs  game_action.rs  game_init.rs  game_query.rs  game_riichi.rs  game_round.rs  game_state.rs  game_win.rs  init.rs  legal.rs  lib.rs  player.rs  query.rs  riichi.rs  round.rs  rules.rs  ryukyoku.rs  settlement.rs  state.rs  win.rs
crates/riichi-engine/src/game/: abort.rs  action.rs  init.rs  mod.rs  query.rs  riichi.rs  round.rs  settlement.rs  state.rs  win.rs
crates/riichi-engine/tests/: half_game.rs
crates/riichi-logic/: Cargo.toml
crates/riichi-logic/src/: acceptance.rs  analysis.rs  dora.rs  evaluation.rs  evaluation_tests.rs  fu.rs  lib.rs  model.rs  scoring.rs  shanten.rs  shape.rs  types.rs  visibility.rs  win_check.rs  yaku.rs
crates/riichi-logic/src/algo/: agari.rs  mod.rs  point.rs  shanten.rs
crates/riichi-proto/: Cargo.toml
crates/riichi-proto/src/: messages.rs
crates/riichi-server/: Cargo.toml
crates/riichi-server/src/: ai_client.rs  application.rs  channel.rs  game.rs  game_loop.rs  lib.rs  main.rs  protocol.rs  room.rs  transport.rs
crates/riichi-session/: Cargo.toml
crates/riichi-session/src/: agent.rs  channel.rs  game.rs  lib.rs
crates/riichi-test/: Cargo.toml
crates/riichi-test/src/: main.rs  parse.rs
deploy/: nginx-riichi.conf.example  riichi-server.service  server.env.example
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  ONLINE_GAME_PLAN.md  PROTOCOL.md  ROADMAP.md  RULES.md
tauri-app/: index.html  package-lock.json  package.json  tsconfig.json
tauri-app/src/: main.ts  protocol.ts  style.css  transport.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: main.rs
