[package]
name = "mahjong-tui"
version = "0.1.0"
edition = "2021"
default-run = "mahjong-tui"

[dependencies]
mahjong-core = { path = "../mahjong-core" }
mahjong-engine = { path = "../mahjong-engine" }
mahjong-yaku = { path = "../mahjong-yaku" }
mahjong-ai = { path = "../mahjong-ai" }
ratatui = "0.29"
crossterm = "0.28"
rand = "0.8"
