[package]
name = "riichi-debug"
version = "0.1.0"
edition = "2021"
default-run = "riichi-debug"

[dependencies]
riichi-core = { path = "../riichi-core" }
riichi-engine = { path = "../riichi-engine" }
riichi-logic = { path = "../riichi-logic" }
riichi-ai = { path = "../riichi-ai" }
riichi-session = { path = "../riichi-session" }
ratatui = "0.29"
crossterm = "0.28"
rand = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
