[package]
name = "riichi-server"
version = "0.1.0"
edition = "2021"

[dependencies]
riichi-core = { path = "../riichi-core" }
riichi-engine = { path = "../riichi-engine" }
riichi-proto = { path = "../riichi-proto" }
riichi-session = { path = "../riichi-session" }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
